--- a/package.json
+++ b/package.json
@@ -9,13 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~46.0.9",
-    "expo-status-bar": "~1.4.0",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
+    "expo": "~44.0.0",
+    "expo-auth-session": "~3.5.0",
+    "expo-google-app-auth": "~8.3.0",
+    "expo-random": "~12.1.1",
+    "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
+    "firebase": "9.8.1",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.64.3",
+    "react-native-deck-swiper": "^2.0.8",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "tailwindcss": "^3.1.8"
   },
   "private": true
 }
